--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,10 +2,16 @@
 body {
     background-color: black;
     align-items: center;
+    font-family: Verdana;
+    text-align: center;
 }
 
 /* change hyperlink underline to match font color */
 a {
     text-decoration: none;
     border-bottom:1px aquamarine;
+}
+
+.copyright {
+    text-align: right;
 }
