--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,8 @@
 body {
     background-color: black;
     align-items: center;
-    font-family: Verdana;
+    font-family: "Verdana", sans-serif;
+    color: white;
     text-align: center;
 }
 
@@ -12,6 +13,8 @@ a {
     border-bottom:1px aquamarine;
 }
 
-.copyright {
+.footer {
     text-align: right;
+    font-size: 21px;
+    color: gray";
 }
